# bs-song-manager-egui

./: Cargo.toml  README.md  index.html
.github/workflows/: release.yml  rust.yml
assets/: manifest.json  sw.js
locales/: en.yml  zh-CN.yml
src/: app.rs  lib.rs  main.rs
