[package]
name = "bs_song_manager"
version = "0.0.1"
authors = ["Kagurazaka Nyaa <dev@kagurazakanyaa.com>"]
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
egui = "0.19.0"
eframe = "0.19.0"
serde_json = "1.0"
tracing-subscriber = "0.3"
rfd = "0.10.0"
rodio = "0.16.0"
sha-1 = "0.10.0"
hex = "0.4.3"
egui_extras = {version="0.19.0",features=["image"]}
image = { version = "0.24", features = ["jpeg", "png"] }


# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
