[package]
name = "bs_song_manager"
version = "0.0.1"
authors = ["Kagurazaka Nyaa <dev@kagurazakanyaa.com>"]
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
log = "0.4"
egui = "0.19.0"
eframe = "0.19.0"
serde_json = "1.0"
tracing-subscriber = "0.3"
rfd = "0.10.0"
rodio = { version = "0.16.0", default-features = false, features = ["vorbis"] }
sha-1 = "0.10.0"
hex = "0.4.3"
egui_extras = { version = "0.19.0", features = ["image"] }
image = { version = "0.24", default-features = false, features = [
    "jpeg",
    "png",
] }
rust-i18n = "0.6.1"
once_cell = "1.16.0"
sys-locale = "0.2.3"


# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }

[package.metadata.i18n]
available-locales = ["en", "zh-CN"]
default-locale = "en"
load-path = "locales"
